{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 68,
  "lineage": "6e9247a3-ab59-814e-75b2-884b632d25fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:internet-gateway/igw-01f47d1628954ee74",
            "id": "igw-01f47d1628954ee74",
            "owner_id": "092988563851",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_eks_marcel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:092988563851:loadbalancer/app/alb-eks-marcel/f30eebf96a71b44b",
            "arn_suffix": "app/alb-eks-marcel/f30eebf96a71b44b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-eks-marcel-865331150.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:092988563851:loadbalancer/app/alb-eks-marcel/f30eebf96a71b44b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-eks-marcel",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05fe93f0e4ca400d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b858301b1f33a0ed"
              },
              {
                "subnet_id": "subnet-0c25dc58c19ff194a"
              }
            ],
            "subnets": [
              "subnet-0b858301b1f33a0ed",
              "subnet-0c25dc58c19ff194a"
            ],
            "vpc_id": "vpc-0e4ebd0a46c84a45d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.sg_for_alb_eks_marcel",
            "aws_subnet.subnet_public_us_east_2a_marcel_01",
            "aws_subnet.subnet_public_us_east_2b_marcel_01",
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:092988563851:listener/app/alb-eks-marcel/f30eebf96a71b44b/f49c90e4b53700bd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:092988563851:listener/app/alb-eks-marcel/f30eebf96a71b44b/f49c90e4b53700bd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:092988563851:loadbalancer/app/alb-eks-marcel/f30eebf96a71b44b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_eks_marcel",
            "aws_security_group.sg_for_alb_eks_marcel",
            "aws_subnet.subnet_public_us_east_2a_marcel_01",
            "aws_subnet.subnet_public_us_east_2b_marcel_01",
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:route-table/rtb-01160b0565ba954f2",
            "id": "rtb-01160b0565ba954f2",
            "owner_id": "092988563851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f47d1628954ee74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c165e57ddddfb7",
            "route_table_id": "rtb-01160b0565ba954f2",
            "subnet_id": "subnet-0c25dc58c19ff194a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet_public_us_east_2a_marcel_01",
            "aws_subnet.subnet_public_us_east_2b_marcel_01",
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6ad737eb3ae08e",
            "route_table_id": "rtb-01160b0565ba954f2",
            "subnet_id": "subnet-0b858301b1f33a0ed"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnet_public_us_east_2a_marcel_01",
            "aws_subnet.subnet_public_us_east_2b_marcel_01",
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:security-group/sg-087e04db2fe83946b",
            "description": "Allow PostgreSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087e04db2fe83946b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-postgres-sg",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-postgres-sg"
            },
            "tags_all": {
              "Name": "rds-postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_alb_eks_marcel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:security-group/sg-05fe93f0e4ca400d0",
            "description": "LoadBalancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe93f0e4ca400d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "marcel-sg-for-alb-eks",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_us_east_2a_marcel_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:subnet/subnet-07accdc1ca23d4cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07accdc1ca23d4cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-us-east-2a-marcel-01"
            },
            "tags_all": {
              "Name": "subnet-private-us-east-2a-marcel-01"
            },
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_us_east_2b_marcel_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:subnet/subnet-094d41661b0bb03fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094d41661b0bb03fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-us-east-2b-marcel-01"
            },
            "tags_all": {
              "Name": "subnet-private-us-east-2b-marcel-01"
            },
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_us_east_2a_marcel_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:subnet/subnet-0c25dc58c19ff194a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c25dc58c19ff194a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-us-east-2-marcel-01"
            },
            "tags_all": {
              "Name": "subnet-public-us-east-2-marcel-01"
            },
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_us_east_2b_marcel_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:subnet/subnet-0b858301b1f33a0ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b858301b1f33a0ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-us-east-2b-marcel-01"
            },
            "tags_all": {
              "Name": "subnet-public-us-east-2b-marcel-01"
            },
            "vpc_id": "vpc-0e4ebd0a46c84a45d"
          },
          "dependencies": [
            "aws_vpc.vpc_us_east_2_marcel_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_us_east_2_marcel_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092988563851:vpc/vpc-0e4ebd0a46c84a45d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04657ff7ac856ecbe",
            "default_route_table_id": "rtb-057db752d9147327f",
            "default_security_group_id": "sg-0ec7b2b3226ee714d",
            "dhcp_options_id": "dopt-04cdb896a30355b14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4ebd0a46c84a45d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057db752d9147327f",
            "owner_id": "092988563851",
            "tags": {
              "Name": "vpc-us-east-2-marcel-01"
            },
            "tags_all": {
              "Name": "vpc-us-east-2-marcel-01"
            }
          }
        }
      ]
    }
  ]
}